see below:  - fixed tilting thumbnail bug  - fixed background bug on mobile  - added smoothscroll  - added auto font scaling

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,8 +13,6 @@ html {
   width: calc(100vw - 180px);
   margin: 0 auto;
   height: 100vh;
-  background-color: #000000;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
   position: relative;
   line-height: 1.1em;
   -webkit-font-smoothing: antialiased;
@@ -27,6 +25,12 @@ html {
   &::-webkit-scrollbar {
     display: none;
   }
+}
+
+html {
+  scroll-behavior: smooth;
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 body {
@@ -84,19 +88,6 @@ body {
     .box {
       position: relative;
       transform-style: preserve-3d;
-      transition: .4s ease-in-out;
-
-      .img-box {
-        position: relative;
-
-        img {
-          width: 100%;
-          height: auto;
-          border-radius: 8px;
-          opacity: .8;
-          transition: .4s ease-in-out;
-        }
-      }
 
       .content {
         position: absolute;
@@ -121,23 +112,26 @@ body {
         }
       }
 
-      &:hover {
-        box-shadow: 0 50px 80px rgba(0, 0, 0, .2);
-        transition: .4s ease-in-out;
-        cursor: pointer;
+      .img {
+        position: relative;
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+        opacity: .8;
+        transition: .5s;
+        transform-style: preserve-3d;
+      }
 
-        img {
-          opacity: 1;
-          transition: .4s ease-in-out;
-        }
+      &:hover {
+        cursor: pointer;
 
         .content {
           transform: translateX(-50%) translateZ(50px) scaleY(1);
           padding: 15px;
+        }
 
-          .project {
-            line-height: 30px;
-          }
+        .img {
+          opacity: 1;
         }
       }
     }
@@ -161,7 +155,6 @@ body {
     .profile {
       width: 15vw;
       height: 15vw;
-      // background: url('/img/profile.jpg');
       background: white;
       background-size: cover;
       margin-right: 90px;
@@ -169,6 +162,8 @@ body {
 
     .info {
       width: 60%;
+      font-size: clamp(1rem, 1.25vw, 1.25rem);
+      line-height: 1em;
     }
   }
 
@@ -213,7 +208,7 @@ body {
     width: 100%;
     height: 100px;
     background: transparent;
-    transition: .7s ease-in-out;
+    transition: .6s;
     z-index: -1;
   }
 
